# llm-agent-guide

./: README.md
langchain/: 如何学习 LangChain.md
others/: python包管理工具uv使用.md
project/langchain/hello-world/: pyproject.toml
project/langchain/quick-agent-demo/: .gitignore  GRADIO_README.md  README.md  env.example  gradio_app.py  main.py  pyproject.toml  run_gradio.py
project/langchain/quick-agent-demo/backend/: agent_module.py  chat-prompt-template.py
rag/: rag架构.md  向量嵌入.md  向量数据库.md  文本分块原理.md  检索后处理-重排-压缩-校正.md
